fix: update alignment of header and footer

--- a/frontend/src/styles/header.scss
+++ b/frontend/src/styles/header.scss
@@ -26,6 +26,7 @@
       grid-template-columns: 1fr auto auto auto auto;
       grid-column-gap: 1.5rem;
       align-items: center;
+      height: 100%;
     }
   }
 
